[package]
name = "receipt-api-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rocket = "0.4.11"
rocket_codegen = "0.4.11"
